--- a/_src/htdocs/assets/css/partials/mixins/_common.styl
+++ b/_src/htdocs/assets/css/partials/mixins/_common.styl
@@ -30,7 +30,7 @@ font_icon($name, $type)
   vertical-align middle
 
 clearfix()
-  &:after
+  &::after
     display block
     clear both
     height 0
@@ -91,7 +91,7 @@ hidden_text()
 
 break_point($type, $css = false)
   if $css
-    if $wtab
+    if $wtab && $wtab >= 0
       if $type == 'pc'
         @media screen and (min-width: ($wpc + 1)px)
           {block}
