--- a/_src/htdocs/_utilities/mixin.pug
+++ b/_src/htdocs/_utilities/mixin.pug
@@ -17,26 +17,28 @@ mixin inline(tag, name, attr)
 //- responsive img
 //- ex) +img_device_src('/common/', 'hoge')
 mixin img_device_src(path, alt)
-  img(src=`${src}pc/${path}` data-pc-src=`${src}pc/${path}` data-sp-src=`${src}sp/${path}` alt!=alt)&attributes(attributes)
+  img(src=`${assets_path}img/pc/${path}` data-pc-src=`${assets_path}img/pc/${path}` data-sp-src=`${assets_path}img/sp/${path}` alt!=alt)&attributes(attributes)
 
 //- img
 //- ex) +img_src('/common/', 'hoge')
 mixin img_src(path, alt)
-  img(src=`${src}${path}` alt!=alt)&attributes(attributes)
+  img(src=`${assets_path}img/${path}` alt!=alt)&attributes(attributes)
 
 //- section
 //- ex) +section('hoge')
 mixin section(name, tag="section", indent="          ")
   != `\n${indent}<!-- ${name}-->`
-  #{tag}(id=name class=`${p}section -${name}`)&attributes(attributes)
-    if block
-      block
-    else
-      p No content provided
+  #{tag}(id=name class=`${p}section ${p}section--${name}`)&attributes(attributes)
+    div(class=`${p}section__outer`)
+      div(class=`${p}section__inner`)
+        if block
+          block
+        else
+          p No content provided
   != `\n${indent}<!-- /${name}-->`
 
 mixin title(en, ja, h="h2")
-  #{h}(class=`${p}title -${h}`)&attributes(attributes)
+  #{h}(class=`${p}title ${p}title--${h}`)&attributes(attributes)
     if block
       span(class=`${p}title_inner`)
         block
