--- a/_src/htdocs/assets/css/partials/mixins/_common.styl
+++ b/_src/htdocs/assets/css/partials/mixins/_common.styl
@@ -89,28 +89,28 @@ hidden_text()
   overflow hidden
   line-height 1
 
-break_point($type, $css = false)
-  if $css
+break_point($media, $type = $mediaquery_type)
+  if $type == 'js'
+    {$layout}{$media} &
+      {block}
+  else
     if $wtab && $wtab >= 0
-      if $type == 'pc'
+      if $media == 'pc'
         @media screen and (min-width: ($wpc + 1)px)
           {block}
-      if $type == 'tab'
+      if $media == 'tab'
         @media screen and (min-width: ($wtab)px) and (max-width: ($wpc)px)
           {block}
-      if $type == 'sp'
+      if $media == 'sp'
         @media screen and (max-width: ($wtab - 1)px)
           {block}
     else
-      if $type == 'pc'
+      if $media == 'pc'
         @media screen and (min-width: ($wsp + 1)px)
           {block}
-      if $type == 'sp'
+      if $media == 'sp'
         @media screen and (max-width: ($wsp)px)
           {block}
-  else
-    {$layout}{$type} &
-      {block}
 
 link_color($link, $hover, $visited, $active)
   if !$link || $link == ''
