--- a/_src/htdocs/assets/css/style.styl
+++ b/_src/htdocs/assets/css/style.styl
@@ -11,7 +11,8 @@ flex-version = flex;
 @import "partials/bases/_initialize"
 
 .{$p}base
-  // this = selector('^[1..-1]')
-  @import "partials/components/**/*"
-  @import "partials/layouts/**/*"
-  @import "partials/pages/**/*"
+  .{$p}wrapper
+    // this = selector('^[2..-1]')
+    @import "partials/components/**/*"
+    @import "partials/layouts/**/*"
+    @import "partials/pages/**/*"
