--- a/_src/htdocs/assets/css/partials/components/_1_accordion.styl
+++ b/_src/htdocs/assets/css/partials/components/_1_accordion.styl
@@ -41,7 +41,7 @@ div(class=`${p}accordion`)
 ```
 */
 .{$p}accordion
-  $this = selector('^[2..-1]')
+  $this = selector($component_selector)
 
   &_button
     & > a
