--- a/_src/htdocs/assets/css/partials/components/_1_intersection.styl
+++ b/_src/htdocs/assets/css/partials/components/_1_intersection.styl
@@ -30,7 +30,7 @@ div(style=`height:1000px;background:#0000ff;` data-intersection='{"threshold": 0
 ```
 */
 .intersection
-  $this = selector('^[2..-1]')
+  $this = selector($component_selector)
 
   &-fadein
     &.is-intersection-init
