--- a/_src/htdocs/assets/css/partials/components/_1_modal.styl
+++ b/_src/htdocs/assets/css/partials/components/_1_modal.styl
@@ -51,7 +51,7 @@ script#modal1(type="text/template")
 ```
 */
 #{$p}modal
-  $this = selector('^[2..-1]')
+  $this = selector($component_selector)
   $close_size = 1em
 
   &__container
