--- a/_src/htdocs/assets/css/partials/components/_1_tab.styl
+++ b/_src/htdocs/assets/css/partials/components/_1_tab.styl
@@ -48,7 +48,7 @@ div(class=`${p}tab`)
 ```
 */
 .{$p}tab
-  $this = selector('^[2..-1]')
+  $this = selector($component_selector)
 
   &_nav
     li
