--- a/_src/htdocs/assets/css/style.styl
+++ b/_src/htdocs/assets/css/style.styl
@@ -12,7 +12,7 @@ flex-version = flex;
 
 .{$p}base
   .{$p}wrapper
-    // this = selector('^[2..-1]')
+    // this = selector($component_selector)
     @import "partials/components/**/*"
     @import "partials/layouts/**/*"
     @import "partials/pages/**/*"
