--- a/_src/htdocs/test/index.pug
+++ b/_src/htdocs/test/index.pug
@@ -1,4 +1,4 @@
-extends ./_layouts/default.pug
+extends ../_layouts/default.pug
 
 block content
   != `index`
@@ -11,4 +11,3 @@ block content
 
   h2 image change test
   p: img(src="" data-pc-src="pc" data-sp-src="sp" alt="mediaquery")
-
