--- a/_src/htdocs/assets/css/style.styl
+++ b/_src/htdocs/assets/css/style.styl
@@ -3,7 +3,7 @@
 flex-version = flex;
 @import "nib"
 
-@import "partials/valiables/**/*"
+@import "partials/variables/**/*"
 @import "partials/mixins/**/*"
 
 @import "partials/plugins/**/*"
