--- a/_src/htdocs/css/partials/bases/_initialize.styl
+++ b/_src/htdocs/css/partials/bases/_initialize.styl
@@ -154,5 +154,5 @@
       max-width 100%
 
 // responsive fontsize
-font_size_responsive('.' + $p + 'base')
+font_size_responsive('.' + $p + 'base' + ' .' + $p + 'wrapper')
 
