--- a/_src/htdocs/html/_layouts/default.pug
+++ b/_src/htdocs/html/_layouts/default.pug
@@ -1,7 +1,7 @@
 doctype html
 
-include ../_utilities/variable.pug
-include ../_utilities/mixin.pug
+include ../_utilities/variables.pug
+include ../_utilities/mixins.pug
 
 html.no-js(lang!=lang dir!=dir)
   head
