--- a/_src/htdocs/css/partials/mixins/_common.styl
+++ b/_src/htdocs/css/partials/mixins/_common.styl
@@ -128,6 +128,8 @@ link_color($link, $hover, $visited, $active)
   {$upc} &
     &:hover
       color $hover
+  &:hover
+    color $link
   &:active,
   &:focus
     color $active
